<resources>
    <string name="title" translatable="false">MYMEDBook</string>
    <string name="accedi">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="non_hai_un_account">Do not you have an account?</string>
    <string name="registrati">Signup</string>
    <string name="campo_troppo_corto">The field is too short</string>
    <string name="campo_non_vuoto">This field can\'t be empty</string>
    <string name="richiesta_non_buon_fine">Request failed, retry.</string>
    <string name="email_o_password_sbagliata">Email and/or password wrong, rectify and retry</string>
    <string name="no_nfc">Your device doesn\'t have NFC, some functionality are not allowed</string>
    <string name="nfc_non_abilitato">NFC isn\'t active</string>
    <string name="no">No</string>
    <string name="si">Yes</string>
    <string name="punti_sospensione">…</string>
    <string name="logout">Logout</string>
    <string name="impossibile_caricare_utente">Impossible to retrieve the user</string>
    <string name="per_vedere_questo_profilo_devi_essere_autenticato">To see this profile you need to be authenticated</string>
    <string name="non_sei_autorizzato">You aren\'t authorized to see this profile</string>
    <string name="richiesta_non_buon_fine_passare_nuovamente_nfc">Request failed, read again the NFC</string>
    <string name="caricamento_profilo_dalla_memoria">Request failed. Opening profile from memory cache</string>
    <string name="codice_tag_non_trovato">TAG code not found.</string>
    <string name="mancano">Missing</string>
    <string name="al_lancio">to sound alarm</string>
    <string name="richiesta_di_assistenza_in_corso">Request of assistance in progress</string>
    <string name="profilo_inesistente">Profile not found</string>
    <string name="data_di_nascita">Date of birth</string>
    <string name="terapia">Therapy</string>
    <string name="apri">Open</string>
    <string name="invio_non_riuscito">Sending image failed</string>
    <string name="terapie">Therapies</string>
    <string name="nfc_advice">If NFC tag don\'t be recognized, please sure to have NFC active and retry</string>
    <string name="cancel">Cancel</string>
    <string name="centododici">112</string>
    <string name="invio_richiesta_di_assistenza" formatted="false">Request of assistance from %1$s %2$s\n http://www.google.com/maps/place/%3$f,%4$f</string>
    <string name="invio_richiesta_di_assistenza_no_coor" formatted="false">Request of assistance from %1$s %2$s</string>
    <string name="richiesta_permessi">Permissions will be required for the rescue functionality.\n The sms sending permission will be used to send emergency messages when necessary to the numbers you have selected on the portal.\nDo not accept them would compromise the various features</string>
    <string name="invio_sms_in_corso">Sending sms…</string>
    <string name="sending_request_help_to_server">Sending help request to server…</string>
    <string name="fast_help">Fast Help</string>
    <string name="no_fast_help">No \"Fast Help\" associate to user</string>
    <string name="iscriviti">To subscribe go to \n http://www.mymedbook.eu/sottoscrizione-pacchetto-fasthelp-plus/</string>
    <string name="vai_al_sito">Open site</string>
    <string name="chiudi">Close</string>
    <string name="since">since</string>
    <string name="nome">Name</string>
    <string name="cognome">Surname</string>
    <string name="repeat_password">Rewrite the password (at least 6 characters)</string>
    <string name="accept_cookie">Express consent for the use of cookies and other profiling technologies (required)</string>
    <string name="accept_geo">Consent to share your geographical location (required)</string>
    <string name="accept_share_data">Consent to the transfer of my data, anonymously TO TERZI partner of MEDBOOK srl. (obligatory)</string>
    <string name="privacy_conditions">Privacy conditions</string>
    <string name="password_non_uguali">The passwords aren\'t equals</string>
    <string name="password_">Password (at least 6 characters)</string>
    <string name="devi_dare_il_tuo_consenso">You must give your consense</string>
    <string name="signup_error">Sorry, wrong respose from server, please retry.</string>
    <string name="success">Success!</string>
    <string name="signup_completed">Signup completed!\n An email was sent to your email address.</string>
    <string name="ok">Ok</string>
    <string name="already_exist">A user with this username already exists.</string>
    <string name="signup_here">Signup here</string>
    <string name="invalid_email">Invalid email</string>
    <string name="dossier">Dossier</string>
    <string name="loading_data">Loading data....</string>
    <string name="my_dossiers">My dossiers</string>
    <string name="impossibile_rec_lista">Impossible to retrive dossiers list</string>
    <string name="riprova">Retry</string>
    <string name="waiting_for_sms_sending">Waiting for sms sending…</string>
    <string name="file_inviato_con_successo">Successful. Updating dossiers list</string>
    <string name="help_request_finished">Help request finished</string>
    <string name="richiesta_di_soccorso_automatica">Automatic help request in 30s</string>
</resources>
